--- a/swetheory/templates/swetheory/area.html
+++ b/swetheory/templates/swetheory/area.html
@@ -38,14 +38,14 @@
 </nav>
 
 <header class="page-header header container-fluid">
-    <div class="description">
-
+    <div class="description">{{area.name}}
     </div>
 </header>
 
 <body>
   <div class="">
     {% block content %}
+
     {% endblock %}
   </div>
 </body>
