ajeitando path url

--- a/swetheory/templates/swetheory/area.html
+++ b/swetheory/templates/swetheory/area.html
@@ -28,7 +28,7 @@
         <a class="nav-link" href="home.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="areas.html">Area de Interesse</a>
+        <a class="nav-link" href="area.html">Area de Interesse</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Sobre</a>
@@ -38,7 +38,7 @@
 </nav>
 
 <header class="page-header header container-fluid">
-    <div class="description">{{area.name}}
+    <div class="description">{{which_area.name}}
     </div>
 </header>
 
