--- a/swetheory/templates/swetheory/home.html
+++ b/swetheory/templates/swetheory/home.html
@@ -31,7 +31,7 @@
         <a class="nav-link" href="home.html">Inicio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="areas.html">Area de Interesse</a>
+        <a class="nav-link" href="area.html">Area de Interesse</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Sobre</a>
