--- a/swetheory/templates/swetheory/area.html
+++ b/swetheory/templates/swetheory/area.html
@@ -1,79 +1,16 @@
+{% extends 'swetheory/base.html' %}
+
+{% block title %}
+  {{ which_area.name }} - {{ block.super }}
+{% endblock %}
+
+{% block breadcrumb %}
+  <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+  <li class="breadcrumb-item active">{{ which_area.name }}</li>
+{% endblock %}
+
+{% block content %}
+    <!-- just leaving it empty for now. we will add core here soon. -->
+{% endblock %}
+
 {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <title>Theories in Software Engineering</title>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- bootstrap -->
-  <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="static/swetheory/css/main.css">
-
-</head>
-<body>
-<!-- Navigation bar -->
-<nav class="navbar navbar-expand-md">
-  <a class="navbar-brand" href="#">Logo</a>
-  <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="main-navigation">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Inicio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="area.html">Area de Interesse</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sobre</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<header class="page-header header container-fluid">
-    <div class="description">{{which_area.name}}
-    </div>
-</header>
-
-<body>
-  <div class="">
-    {% block content %}
-
-    {% endblock %}
-  </div>
-</body>
-
-<!-- <footer class="page-footer">
-  <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-        <h6 class="text-uppercase font-weight-bold">Additional Information</h6>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <p>1640 Riverside Drive, Hill Valley, California
-        <br/>info@mywebsite.com
-        <br/>+ 01 234 567 88
-        <br/>+ 01 234 567 89</p>
-      </div>
-    </div>
-
-  <div class="footer-copyright text-center">© 2019 Copyright: MyWebsite.com</div>
-</footer> -->
-
-
-<!-- jquery -->
-<script src="static/swetheory/js/jquery-3.3.1.min.js"></script>
-<script src="static/swetheory/js/bootstrap.bundle.min.js"></script>
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
-</body>
-</html>
