--- a/swetheory/templates/swetheory/createtheories.html
+++ b/swetheory/templates/swetheory/createtheories.html
@@ -1,4 +1,5 @@
 {% extends 'swetheory/base.html' %}
+{% load widget_tweaks %}
 
 {% block title %}
   Register a new theory
@@ -13,10 +14,11 @@
 {% block content %}
   <form method="post" novalidate>
       {% csrf_token %}
-        {% include 'swetheory/includes/form.html' %}
+      {% include 'swetheory/includes/form.html' %}
 
       <button type="submit" class="btn btn-success">Post</button>
   </form>
+<br>
 {% endblock %}
 
 {% load static %}
