salvando causa, efeito, evidencia e a proposicao q une elas

--- a/swetheory/templates/swetheory/includes/form.html
+++ b/swetheory/templates/swetheory/includes/form.html
@@ -1,7 +1,7 @@
-{% load widget_tweaks %}
+<!--{% load widget_tweaks %}-->
 
 <!--CAUSE-->
-<h1>Causa</h1>
+<h4>Causa</h4>
 {% for field in causeform %}
   <div class="form-group">
     {{ field.label_tag }}
@@ -30,7 +30,7 @@
 {% endfor %}
 
 <!--EFFECT-->
-<h1>Efeito</h1>
+<h4>Efeito</h4>
 {% for field in effectform %}
   <div class="form-group">
     {{ field.label_tag }}
@@ -60,7 +60,7 @@
 
 
 <!-- EVIDENCE -->
-<h1>Evidencia</h1>
+<h4>Evidência</h4>
 {% for field in evidenceform %}
   <div class="form-group">
     {{ field.label_tag }}
