--- a/swetheory/templates/swetheory/includes/form.html
+++ b/swetheory/templates/swetheory/includes/form.html
@@ -1,7 +1,8 @@
-<!--{% load widget_tweaks %}-->
+{% load widget_tweaks %}
 
 <!--CAUSE-->
 <h4>Causa</h4>
+
 {% for field in causeform %}
   <div class="form-group">
     {{ field.label_tag }}
