--- a/swetheory/templates/swetheory/base.html
+++ b/swetheory/templates/swetheory/base.html
@@ -1,36 +1,40 @@
-{% load static %}<!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="utf-8">
-      <title>{% block title %}Theories in Software Engineering{% endblock %}</title>
-      <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
-      <link rel="stylesheet" href="{% static 'swetheory/css/bootstrap.min.css' %}">
-      <link rel="stylesheet" href="{% static 'swetheory/css/main.css' %}">
+<head>
+    <meta charset="utf-8">
+    <title>{% block title %}Theories in Software Engineering{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'swetheory/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'swetheory/css/main.css' %}">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <nav class="navbar navbar-expand-ms">
-        <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">Theories in Software Engineering</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+<nav class="navbar navbar-expand-ms">
     <div class="container">
-      <ol class="breadcrumb my-4">
+        <a class="navbar-brand" href="{% url 'home' %}">Theories in Software Engineering</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Sobre</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container">
+    <ol class="breadcrumb my-4">
         {% block breadcrumb %}
         {% endblock %}
-      </ol>
-      {% block content %}
-      {% endblock %}
-    </div>
+    </ol>
+    {% block content %}
+    {% endblock %}
+</div>
+<script src="static/swetheory/js/jquery-3.3.1.min.js"></script>
+<script src="static/swetheory/js/bootstrap.bundle.min.js"></script>
 
-  </body>
+</body>
+
 
 </html>
