--- a/swetheory/templates/swetheory/createtheories.html
+++ b/swetheory/templates/swetheory/createtheories.html
@@ -16,7 +16,7 @@ Register a new theory
     {% csrf_token %}
     {% include 'swetheory/includes/form.html' %}
 
-    <button type="submit" class="btn btn-success">Post</button>
+    <button type="submit" class="btn btn-success">Save</button>
 </form>
 <br>
 {% endblock %}
