--- a/swetheory/templates/swetheory/base.html
+++ b/swetheory/templates/swetheory/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -31,8 +32,13 @@
     {% block content %}
     {% endblock %}
 </div>
-<script src="static/swetheory/js/jquery-3.3.1.min.js"></script>
-<script src="static/swetheory/js/bootstrap.bundle.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+<script src="{% static 'swetheory/js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'swetheory/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'swetheory/js/main.js' %}"></script>
+
+{% block javascript %}{% endblock %}
 
 </body>
 
