--- a/swetheory/templates/swetheory/includes/form.html
+++ b/swetheory/templates/swetheory/includes/form.html
@@ -1,93 +1,113 @@
 {% load widget_tweaks %}
 
-
 <!--CAUSE-->
-<h4>Causa</h4>
-
-{% for field in causeform %}
-  <div class="form-group">
-    {{ field.label_tag }}
-
-    {% if causeform.is_bound %}
-      {% if field.errors %}
+<div class="card">
+  <h5 class="card-header">Cause</h5>
+  <div class="card-body">
+    {% for field in causeform %}
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
+      <div class="col-sm-8">
+        {% if causeform.is_bound %}
+        {% if field.errors %}
         {% render_field field class="form-control is-invalid" %}
         {% for error in field.errors %}
-          <div class="invalid-feedback">
-            {{ error }}
-          </div>
+        <div class="invalid-feedback">
+          {{ error }}
+        </div>
         {% endfor %}
-      {% else %}
+        {% else %}
+
         {% render_field field class="form-control is-valid" %}
+        {% endif %}
+        {% else %}
+        {% render_field field class="form-control" %}
 
-      {% endif %}
-    {% else %}
-      {% render_field field class="form-control" %}
+        {% endif %}
 
-    {% endif %}
-
-    {% if field.help_text %}
-      <small class="form-text text-muted">
-        {{ field.help_text }}
-      </small>
-    {% endif %}
+        {% if field.help_text %}
+        <small class="form-text text-muted float-right">
+          {{ field.help_text }}
+        </small>
+        {% endif %}
+      </div>
+    </div>
+    {% endfor %}
   </div>
-{% endfor %}
+</div>
+<br>
+
 
 <!--EFFECT-->
-<h4>Efeito</h4>
-{% for field in effectform %}
-  <div class="form-group">
-    {{ field.label_tag }}
-
-    {% if effectform.is_bound %}
-      {% if field.errors %}
+<div class="card">
+  <h5 class="card-header">Effect</h5>
+  <div class="card-body">
+    {% for field in effectform %}
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
+      <div class="col-sm-8">
+        {% if effectform.is_bound %}
+        {% if field.errors %}
         {% render_field field class="form-control is-invalid" %}
         {% for error in field.errors %}
-          <div class="invalid-feedback">
-            {{ error }}
-          </div>
+        <div class="invalid-feedback">
+          {{ error }}
+        </div>
         {% endfor %}
-      {% else %}
+        {% else %}
+
         {% render_field field class="form-control is-valid" %}
-      {% endif %}
-    {% else %}
-      {% render_field field class="form-control" %}
-    {% endif %}
+        {% endif %}
+        {% else %}
+        {% render_field field class="form-control" %}
 
-    {% if field.help_text %}
-      <small class="form-text text-muted">
-        {{ field.help_text }}
-      </small>
-    {% endif %}
+        {% endif %}
+
+        {% if field.help_text %}
+        <small class="form-text text-muted float-right">
+          {{ field.help_text }}
+        </small>
+        {% endif %}
+      </div>
+    </div>
+    {% endfor %}
   </div>
-{% endfor %}
+</div>
 
+<br>
 
 <!-- EVIDENCE -->
-<h4>Evidência</h4>
-{% for field in evidenceform %}
-  <div class="form-group">
-    {{ field.label_tag }}
-
-    {% if evidenceform.is_bound %}
-      {% if field.errors %}
+<div class="card">
+  <h5 class="card-header">Evidence</h5>
+  <div class="card-body">
+    {% for field in evidenceform %}
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">{{ field.label_tag }}</label>
+      <div class="col-sm-8">
+        {% if evidenceform.is_bound %}
+        {% if field.errors %}
         {% render_field field class="form-control is-invalid" %}
         {% for error in field.errors %}
-          <div class="invalid-feedback">
-            {{ error }}
-          </div>
+        <div class="invalid-feedback">
+          {{ error }}
+        </div>
         {% endfor %}
-      {% else %}
-        {% render_field field class="form-control is-valid" %}
-      {% endif %}
-    {% else %}
-      {% render_field field class="form-control" %}
-    {% endif %}
+        {% else %}
 
-    {% if field.help_text %}
-      <small class="form-text text-muted">
-        {{ field.help_text }}
-      </small>
-    {% endif %}
+        {% render_field field class="form-control is-valid" %}
+        {% endif %}
+        {% else %}
+        {% render_field field class="form-control" %}
+
+        {% endif %}
+
+        {% if field.help_text %}
+        <small class="form-text text-muted float-right">
+          {{ field.help_text }}
+        </small>
+        {% endif %}
+      </div>
+    </div>
+    {% endfor %}
   </div>
-{% endfor %}
+</div>
