atualizando a tela de about

--- a/swetheory/templates/swetheory/home.html
+++ b/swetheory/templates/swetheory/home.html
@@ -8,12 +8,11 @@
 <body>
 <div class="description">
     <h1>Uncovering theories in Software Engineering</h1>
-    <p>This page will help you find all software engineering theories related to a certain area of interest.</p>
-    <p>Search here</p>
+    <p>This page will help you find all software engineering theories!</p>
+    <p>Choose an area of interest to explore:</p>
 
     <div class="container">
         <div class="dropdown show">
-
             <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Domain of interest
             </a>
