--- a/swetheory/templates/swetheory/base.html
+++ b/swetheory/templates/swetheory/base.html
@@ -18,7 +18,7 @@
         <a class="navbar-brand" href="{% url 'home' %}">Theories in Software Engineering</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Sobre</a>
+                <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
         </ul>
     </div>
