--- a/swetheory/templates/swetheory/home.html
+++ b/swetheory/templates/swetheory/home.html
@@ -1,19 +1,15 @@
 {% extends 'swetheory/base.html' %}
 
-{% block breadcrumb %}
-<li class="breadcrumb-item active">Home</li>
-{% endblock %}
 
 {% block content %}
 <body>
 <div class="description">
-    <h1>Uncovering theories in Software Engineering</h1>
-    <p>This page will help you find all software engineering theories!</p>
+    <h1>Theories in Software Engineering</h1>
     <p>Choose an area of interest to explore:</p>
 
     <div class="container">
         <div class="dropdown show">
-            <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="btn btn-drop dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Domain of interest
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
