--- a/swetheory/templates/swetheory/area.html
+++ b/swetheory/templates/swetheory/area.html
@@ -6,13 +6,11 @@
 {% endblock %}
 
 
-{% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-<li class="breadcrumb-item active">{{ current_area.name }}</li>
-{% endblock %}
-
-
 {% block content %}
+<ol class="breadcrumb my-3">
+    <li class="breadcrumb-item"><a href="{% url 'home' %} ">Home</a></li>
+    <li class="breadcrumb-item active" id="currentArea">{{ current_area.name }}</li>
+</ol>
 <p>Look for propositions by choosing either a cause contruct, an effect construct, or a proposition.</p>
 
 <form method="post" id="search-form">
@@ -28,7 +26,7 @@
 
 </div>
 <br>
-<a href="{% url 'new_theory' current_area.name %}" class="btn btn-primary float-right">New Theory</a>
+<a href="{% url 'new_theory' current_area.name %}" class="btn btn-outline-info float-right">New Theory</a>
 {% endblock %}
 
 
