--- a/swetheory/templates/swetheory/newconstruct.html
+++ b/swetheory/templates/swetheory/newconstruct.html
@@ -6,17 +6,17 @@
 Register a new theory
 {% endblock %}
 
-{% block breadcrumb %}
-<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-<li class="breadcrumb-item"><a href="{% url 'area_of_interest' current_area.name %}">{{ current_area.name }}</a></li>
-<li class="breadcrumb-item"><a href="{% url 'new_theory' current_area.name %}">New theory</a></li>
-<li class="breadcrumb-item active">Add construct</li>
-{% endblock %}
-
 {% block content %}
+<ol class="breadcrumb my-3">
+    <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'area_of_interest' current_area.name %}">{{ current_area.name }}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'new_theory' current_area.name %}">New proposition</a></li>
+    <li class="breadcrumb-item active">Add construct</li>
+</ol>
+
 <form method="post" >
     {% csrf_token %}
-     <div class="card">
+    <div class="card">
         <h5 class="card-header">Construct</h5>
         <div class="card-body">
             {% for field in form %}
@@ -51,9 +51,12 @@ Register a new theory
         </div>
     </div>
     <br>
+    <p>
+        <a class="btn btn-outline-secondary float-left" href="../">Cancel</a>
+        <button type="submit" class="btn btn-success float-right">Save</button>
+    </p>
 
 
-    <button type="submit" class="btn btn-success">Save</button>
 </form>
 <br>
 
